Fix alignment of title when back button is hidden

--- a/src/main/resources/src/style/components/recipebook.sass
+++ b/src/main/resources/src/style/components/recipebook.sass
@@ -43,7 +43,7 @@
 			font-size: 0
 
 			&.hidden
-				display: none
+				visibility: hidden
 
 			svg
 				width: 2rem
